<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:orientation="vertical"
        android:background="@color/black1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">




        <ImageView
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:elevation="6sp"
            android:src="@drawable/logo_white"
            android:layout_width="120sp"
            android:layout_height="120sp"/>

        <TextView
            android:text="@string/welcome_to_todo_app"
            android:layout_margin="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginLeft="12sp"
            android:layout_marginRight="12sp"
            android:layout_marginTop="30sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                android:hint="@string/enter_your_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginLeft="12sp"
            android:layout_marginRight="12sp"
            android:layout_marginTop="30sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:inputType="textEmailAddress"
                android:hint="@string/enter_your_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginLeft="12sp"
            android:layout_marginRight="12sp"
            android:layout_marginTop="30sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>



        <Button
            android:id="@+id/register"
            android:elevation="6sp"
            android:layout_marginTop="30sp"
            android:text="@string/sign_up"
            android:layout_marginRight="12sp"
            android:layout_marginLeft="12sp"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/already_have_account_login_here"
            android:layout_margin="20sp"
            android:onClick="loginHere"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="OnClick" />
        <ProgressBar
            android:id="@+id/progress"
            android:layout_gravity="center"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</ScrollView>